# voxmesh

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  SECURITY.md  conanfile.py
.cursor/rules/: 00-core.mdc  contracts.mdc  cpp.mdc  dotnet.mdc  python.mdc
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_task.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  contracts.yml  cpp.yml  dotnet.yml  package.yml  python.yml
LICENSES/: README.md
apps/desktop-recorder/: CMakeLists.txt
apps/desktop-recorder/qml/: Main.qml
apps/desktop-recorder/src/: backend_factory.cpp  backend_factory.hpp  main.cpp  recorder_controller.cpp  recorder_controller.hpp
apps/desktop-recorder/tests/: CMakeLists.txt  recorder_controller_test.cpp
docs/adr/: 0001-monorepo.md  0002-desktop-stack.md  0003-qt-licensing.md  0004-platform-audio-backends.md  0005-cmake-conan.md  0006-separate-tracks.md  0007-clock-synchronization.md  0008-grpc-media-transport.md  0009-kafka-usage.md  0010-postgresql-source-of-truth.md  0011-redis-boundaries.md  0012-s3-recording-storage.md  0013-vector-database.md  0014-durable-workflows.md  0015-model-provider-abstraction.md  0016-local-spool-encryption.md  0017-github-flow.md  0018-packaging-signing.md  0019-observability-privacy.md  0020-multi-tenant-authorization.md  README.md
docs/architecture/: voxmesh-master-prompt.md
docs/development/: branch-protection.md
libs/contracts/: README.md
libs/contracts/proto/voxmesh/media/v1/: audio_frame.proto
libs/contracts/proto/voxmesh/stt/v1/: stt_stream_service.proto
libs/contracts/proto/voxmesh/transcript/v1/: transcript_segment.proto
libs/cpp/: CMakeLists.txt
libs/cpp/audio-core/: CMakeLists.txt  README.md
libs/cpp/audio-core/benchmarks/: CMakeLists.txt  ring_buffer_bench.cpp
libs/cpp/audio-core/include/voxmesh/audio/: capture.hpp  clock_sync.hpp  config.hpp  frame.hpp  recording.hpp  ring_buffer.hpp  session.hpp  types.hpp
libs/cpp/audio-core/include/voxmesh/audio/testing/: fake_backend.hpp  signal_generator.hpp
libs/cpp/audio-core/src/: clock_sync.cpp  config.cpp  session.cpp
libs/cpp/audio-core/src/testing/: fake_backend.cpp  signal_generator.cpp
libs/cpp/audio-core/tests/: CMakeLists.txt  clock_sync_test.cpp  config_test.cpp  fake_backend_test.cpp  ring_buffer_test.cpp  session_test.cpp  signal_generator_test.cpp
libs/cpp/audio-dsp/: CMakeLists.txt
libs/cpp/audio-dsp/include/voxmesh/dsp/: fir_decimator.hpp  stt_stream_producer.hpp
libs/cpp/audio-dsp/src/: fir_decimator.cpp  stt_stream_producer.cpp
libs/cpp/audio-dsp/tests/: CMakeLists.txt  fir_decimator_test.cpp  stt_stream_producer_test.cpp
libs/cpp/core/: CMakeLists.txt
libs/cpp/core/include/voxmesh/core/: version.hpp
libs/cpp/core/src/: version.cpp
libs/cpp/core/tests/: CMakeLists.txt  version_test.cpp
libs/cpp/media-container/: CMakeLists.txt
libs/cpp/media-container/include/voxmesh/media/: recording_writer.hpp
libs/cpp/media-container/src/: ffmpeg_recording_writer.cpp
libs/cpp/media-container/tests/: CMakeLists.txt  ffmpeg_recording_writer_test.cpp
libs/cpp/streaming-client/: CMakeLists.txt
libs/cpp/streaming-client/include/voxmesh/stt/: stt_stream_client.hpp
libs/cpp/streaming-client/include/voxmesh/stt/testing/: mock_stt_server.hpp
libs/cpp/streaming-client/src/: grpc_stt_stream_client.cpp
libs/cpp/streaming-client/src/testing/: mock_stt_server.cpp
libs/cpp/streaming-client/tests/: CMakeLists.txt  grpc_stream_test.cpp
packaging/windows/: Package.wxs  README.md  build-msi.ps1
platform/windows/audio-wasapi/: CMakeLists.txt
platform/windows/audio-wasapi/include/voxmesh/platform/windows/: wasapi_backend.hpp
platform/windows/audio-wasapi/src/: com_utils.cpp  com_utils.hpp  wasapi_backend.cpp  wasapi_capture_stream.cpp  wasapi_capture_stream.hpp  wasapi_device_enumerator.cpp  wasapi_device_enumerator.hpp
platform/windows/audio-wasapi/tests/: CMakeLists.txt  wasapi_backend_test.cpp
services/ai/stt/: constraints.txt  pyproject.toml
services/ai/stt/src/voxmesh_stt/: __init__.py  app.py
services/ai/stt/tests/: test_health.py
services/control-plane/: Directory.Build.props  VoxMesh.ControlPlane.slnx
services/control-plane/src/VoxMesh.ControlPlane.Api/: Program.cs
services/control-plane/src/VoxMesh.ControlPlane.Api/Properties/: launchSettings.json
services/control-plane/tests/VoxMesh.ControlPlane.Api.Tests/: ApiEndpointTests.cs  Directory.Build.props  VoxMesh.ControlPlane.Api.Tests.csproj
